[tool.poetry]
name = "ml-project-generative-adversarial-network"
version = "0.1.0"
description = ""
authors = ["usserra <123895232+usserra@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ml_project_generative_adversarial_network"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = ">=1.19,<=1.24.3"
pandas = "^2.0.3"
seaborn = "^0.12.2"
keras = "^2.13.1"
tensorflow = "^2.13.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
